--- a/sup/frontend/package.json
+++ b/sup/frontend/package.json
@@ -6,9 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stacks/connect": "^7.0.0",
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "regenerator-runtime": "^0.13.10"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
