--- a/dex/frontend/package.json
+++ b/dex/frontend/package.json
@@ -6,10 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stacks/connect": "^7.0.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.10"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
