--- a/dex/frontend/package.json
+++ b/dex/frontend/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@stacks/connect": "^7.0.0",
+    "@tailwindcss/forms": "^0.5.3",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
