--- a/dex/frontend/package.json
+++ b/dex/frontend/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@stacks/connect": "^7.0.0",
+    "@stacks/network": "^5.0.0",
+    "@stacks/transactions": "^5.0.2",
     "@tailwindcss/forms": "^0.5.3",
     "next": "latest",
     "react": "^17.0.2",
