--- a/dex/frontend/package.json
+++ b/dex/frontend/package.json
@@ -13,6 +13,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.4.0",
     "regenerator-runtime": "^0.13.10"
   },
   "devDependencies": {
