--- a/dex/defi-contracts/Clarinet.toml
+++ b/dex/defi-contracts/Clarinet.toml
@@ -6,9 +6,10 @@ telemetry = true
 requirements = []
 analysis = ["check_checker"]
 costs_version = 2
+
 [contracts.beanstalk-exchange]
 path = "contracts/beanstalk-exchange.clar"
-depends_on = []
+depends_on = ["magic-beans"]
 
 [contracts.magic-beans]
 path = "contracts/magic-beans.clar"
