--- a/defi-contracts/Clarinet.toml
+++ b/defi-contracts/Clarinet.toml
@@ -6,11 +6,14 @@ telemetry = true
 requirements = []
 analysis = ["check_checker"]
 costs_version = 2
-
 [contracts.beanstalk-exchange]
 path = "contracts/beanstalk-exchange.clar"
-depends_on = ["magic-beans"]
+depends_on = ["magic-beans", "magic-beans-lp"]
 
 [contracts.magic-beans]
 path = "contracts/magic-beans.clar"
+depends_on = []
+
+[contracts.magic-beans-lp]
+path = "contracts/magic-beans-lp.clar"
 depends_on = []
